--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,11 +1,4 @@
 name: Azure Pipelines
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'DEMA Final Project CI/CD'
-    appType: 'webApp'
-    WebAppName: 'Ghawanni-Udacity-Final-Project-AppService'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
 variables:
   python.version: '3.7.6'
 stages:
@@ -40,10 +33,10 @@ stages:
         deploy:
           steps:
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App'
+            displayName: 'Deploy Azure Web App (FakeRestAPI)'
             inputs:
-              azureSubscription: '4fc8a9ce-bdb4-476f-aa96-2948a69c3f62'
-              appName: 'FakeAPI'
+              azureSubscription: 'DEMA Final Project CI/CD'
+              appName: 'FakeRestAPI'
               appType: webApp
               package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
   # - deployment: VMDeploy
