--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -32,6 +32,9 @@ stages:
       runOnce:
         deploy:
           steps:
+          - download: current
+            displayName: Download FakeRestAPI Artifact
+            artifact: drop-fakerestapi
           - task: AzureWebApp@1
             displayName: 'Deploy Azure Web App (FakeRestAPI)'
             inputs:
