Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -24,6 +24,8 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip
       displayName: 'Upload Package'
       artifact: drop-fakerestapi
+- stage: Deploy
+  jobs:  
   - deployment: FakeRestAPI
     pool:
       vmImage: 'Ubuntu-16.04'
