--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -65,7 +65,16 @@ stages:
       displayName: "Jmeter Endurance Test"
       inputs:
         script: 'jmeter -n -t $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/Endurance.jmx -l $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance-results-report.csv -e -o $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance_html_report'
-
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance_html_report'
+        ArtifactName: 'drop-endurance-report'
+        publishLocation: 'Container'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/automatedtesting/jmeter/load_html_report'
+        ArtifactName: 'drop-load-report'
+        publishLocation: 'Container'
   # - deployment: VMDeploy
   #   displayName: NAME
   #   environment:
