Update azure-pipelines.yaml for Azure Pipelines
added html report folder creation step before running the tests

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -60,11 +60,15 @@ stages:
     - task: CmdLine@2
       displayName: "Jmeter Load Test"
       inputs:
-        script: 'jmeter -n -t $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/Load.jmx -l $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/load-results-report.csv -e -o $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/load_html_report'
+        script: |
+          mkdir -p load_html_report
+          'jmeter -n -t $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/Load.jmx -l $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/load-results-report.csv -e -o $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/load_html_report'
     - task: CmdLine@2
       displayName: "Jmeter Endurance Test"
       inputs:
-        script: 'jmeter -n -t $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/Endurance.jmx -l $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance-results-report.csv -e -o $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance_html_report'
+        script: |
+          mkdir -p endurance_html_report
+          'jmeter -n -t $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/Endurance.jmx -l $(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance-results-report.csv -e -o $(System.DefaultWorkingDirectory)/reports/endurance_html_report'
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(System.DefaultWorkingDirectory)/automatedtesting/jmeter/endurance_html_report'
