--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -86,7 +86,7 @@ stages:
       - task: CmdLine@2
         displayName: Install Newman Runner
         inputs: 
-          script: npm install -g newman
+          script: sudo npm install -g newman
           workingDirectory: '$(System.DefaultWorkingDirectory)'
       - task: CmdLine@2
         displayName: Run Newman Runner
