Update azure-pipelines.yaml for Azure Pipelines
fixed selenium VM?

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -103,9 +103,9 @@ stages:
   - deployment: VMDeploy
     displayName: FunctionalUITesting
     environment:
-      name:  TESTrw2q1  `
+      name:  TEST
       resourceType: VirtualMachine
-      tags: TAG NAME
+      tags: TEST
     strategy:
       runOnce:
         deploy:
