Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -137,6 +137,7 @@ stages:
   #         testRunTitle: 'Integration Tests'
   - deployment: VMDeploy
     displayName: FunctionalUITesting
+    environment: 'TEST'
     strategy:
       runOnce:
         deploy:
