did some makefile modifications

--- a/automatedtesting/selenium/makefile
+++ b/automatedtesting/selenium/makefile
@@ -4,4 +4,6 @@ install:
 	sudo apt-get install python3-pip -y
 	sudo apt-get install unzip -y
 	sudo apt-get install -y chromium-browser
+	sudo apt-get install -y chromium-chromedriver
 	pip3 install selenium
+	export PATH=$PATH:/usr/lib/chromium-browser/
