--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -176,6 +176,6 @@ stages:
               script: |
                 sudo mkdir /var/logs
                 cd $(Pipeline.Workspace)/drop-selenium
-                echo $(date "+%Y-%m-%d %H:%M:%S") >> /var/logs/selenium-test.log
-                python3 login.py >> /var/logs/selenium-test.log
-                cat /var/logs/selenium-test.log
+                sudo echo $(date "+%Y-%m-%d %H:%M:%S") >> /var/logs/selenium-test.log
+                sudo python3 login.py >> /var/logs/selenium-test.log
+                sudo cat /var/logs/selenium-test.log
