Update azure-pipelines.yaml for Azure Pipelines
using tee instead of >>

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -176,6 +176,6 @@ stages:
               script: |
                 sudo mkdir /var/logs
                 cd $(Pipeline.Workspace)/drop-selenium
-                sudo echo $(date "+%Y-%m-%d %H:%M:%S") >> /var/logs/selenium-test.log
-                sudo python3 login.py >> /var/logs/selenium-test.log
+                echo $(date "+%Y-%m-%d %H:%M:%S") | sudo tee -a /var/logs/selenium-test.log
+                python3 login.py | sudo tee -a /var/logs/selenium-test.log
                 sudo cat /var/logs/selenium-test.log
